feat: creates min info for user and payments to obtain more detailed information